<resources>
    <string name="google_maps_key">PLACE_YOUR_MAPS_KEY</string>
    <string name="authorization_key">AUTH_KEY</string>
    <string name="app_name">Notary-App®</string>
    <string name="app_name1">Notary-App®</string>
    <string name="app_title">Notaries Evolved</string>
    <string name="app_version">v.1.0</string>
    <string name="app_logo">logo</string>
    <string name="app_background">app background</string>
    <string name="signInFragmentSignIn">Sign In</string>
    <string name="sign_in">Notary Login</string>
    <string name="email">Email</string>
    <string name="password">Password </string>
    <string name="forgotPassword"><u>Forgot Password?</u></string>
    <string name="don_t_have_an_account">New Notary Registration</string>
    <string name="welcome_to_notaryapp_notary">Welcome to \nNotary-App®</string>
    <string name="account_setup">Let’s start by getting your account setup.</string>
    <string name="registration_process">To start the registration process, please click the link in your email or enter the confirmation code below.</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="regemail">Email</string>
    <string name="confirmEmail">Confirm Email</string>
    <string name="Confirmpassword">Confirm Password</string>
    <string name="hintfirstName"><font size="15">Enter First Name</font></string>
    <string name="hintlastName"><font size="15">Enter Last Name</font></string>
    <string name="hintphoneNumber"><font size="15">Enter PhoneNumber</font></string>
    <string name="hintemail"><font size="15">Enter Email</font></string>
    <string name="submit">SUBMIT</string>
    <string name="enterwd">Enter Password</string>
    <string name="reenter">Re_Enter Password</string>
    <string name="otpSent">OTP SENT !</string>
    <string name="otpSentto">We have sent a One Time Password (OTP) to your registered phone and email.</string>
    <string name="verifyuraccount">VERIFY YOUR ACCOUNT</string>
    <string name="resendlink">Resend OTP</string>
    <string name="changeemail">Change email “name@email.com”</string>
    <string name="continueotp">Continue</string>
    <string name="regmail">name@gmail.com</string>
    <string name="passwordTooltip">Password should include 1 Capital letter, 1 Small letter,1 Special character and 1 Number and Minimum 8</string>
    <string name="text_ok">OK</string>
    <string name="note">Note:</string>
    <string name="doc_required">Documents Required</string>
    <string name="card_text_one">Government issued ID (Driver’s License or Passport)</string>
    <string name="card_text_two">Notary Commission Number</string>
    <string name="card_text_three">Your Notary Seal and a White Piece of Paper</string>
    <string name="access_text">Notary-App® needs to access certain features on your phone.</string>
    <string name="allow_access">Allow Access</string>
    <string name="camera_string">Camera for verifying identity &amp; documents</string>
    <string name="mic_string">Mic for verifying you by voice comparison</string>
    <string name="msg__string">SMS for 2-factor security &amp; password recovery</string>
    <string name="location_string">Location services to protect you from ID theft</string>
    <string name="permission_head">What You Will Need to Register</string>
    <string name="permission_sub_head">You will need the following items to complete the registration process.</string>
    <string name="textHead">STEP 1/2 \nVERIFY YOUR IDENTITY</string>
    <string name="textHeadCamera">STEP 1/2 \nSETUP YOUR PROFILE</string>
    <string name="textHeadValidate">VERIFY AN ID</string>
    <string name="text_sub_head">To protect against fraud, please have your government issued ID ready to begin the process.</string>
    <string name="textid">Select Your ID Type</string>
    <string name="acceptance_note">Note: By registering to Notary-App®, you are accepting the <u>Terms of Service</u>.</string>
    <string name="start">Start</string>
    <string name="driver_license_text_front">Please take a photo of <b> the <u>front</u> of your Driver\’s License </b></string>
    <string name="driver_license_text_back">Please take a photo of <b> the <u>back</u> of your Driver\’s License </b></string>
    <string name="passport_text">Please take a photo of your<b> Passport </b></string>
    <string name="nic_text">Please take a photo of your <b> NIC(State ID) </b></string>
    <string name="workpermit_text">Please take a photo of your <b> Work Permit </b></string>
    <string name="passport_card_text">Please take a photo of your <b>Passport Card</b></string>
    <string name="residence_text">Please take a photo of your <b>Residence Permit</b></string>
    <string name="visa_text">Please take a photo of your<b> VISA </b></string>
    <string name="selfie_text"> Lets\ ’s capture an <u>image of your face</u> to ensure no one is trying to steal your identity. Align your face below and take a photo</string>
    <string name="driver_license_text">Please take a photo of <b> \nthe <u>front</u> of your Driver\ ’s License </b></string>
    <string name="add_docs_camera_sub_text">Please take a photo of each of the\n<b>  <u>Seal and Signature</u></b> pages.</string>
    <string name="camera_note">“Notary-App®” Would \nLike to Access the Camera</string>
    <string name="camera_note_sub_head">This let’s you take photos, videos and \ncapture images of documents</string>
    <string name="dont_allow">Don\'t Allow</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert</string>
    <string name="be_patient">Please <b> Be Patient as We Verify Your Identity.</b>On rare occasions, this may take up to two minutes to complete." </string>
    <string name="verify">VERIFY YOUR IDENTITY</string>
    <string name="contact_details">Please contact Notary-App® Data Solutions, Inc. \nat (222) 222–2222.</string>
    <string name="retry">Retry</string>
    <string name="abort">Abort</string>
    <string name="profile_head">Please Review and Complete Your Profile Information</string>
    <string name="update_profile_photo">Update \nProfile Photo</string>
    <string name="congrats_text">Congratulations, you have successfully completed the Notary-App® registration process.</string>
    <string name="profile_id">www.notaryappdate.com/profile/\njohnsmithDKCP2918</string>
    <string name="success_msg">We have created a profile page for you on our website. It will not go live until you claim it.</string>
    <string name="please_contact">Please contact Notary-App® Data Solutions, Inc. \nat (222) 222–222</string>
    <string name="viewprofile"><u>VIEW YOUR PROFILE</u></string>
    <string name="use_another_id">USE ANOTHER ID</string>
    <string name="verification_failed">VERIFICATION FAILED</string>
    <string name="caution">CAUTION!</string>
    <string name="call_support">CALL SUPPORT</string>
    <string name="success">SUCCESS!!!</string>
    <string name="id_validate">ID VALIDATED</string>
    <string name="verifyok">OK</string>
    <string name="license_page_head">ADD COMMISSION NUMBER</string>
    <string name="license_page_sub">Enter Your Notary Commission Number.</string>
    <string name="add_address">Add The address associated with this commission number.</string>
    <string name="step2">STEP 2/2 \nVERIFY YOUR IDENTITY</string>
    <string name="add_stamp">ADD YOUR SEAL</string>
    <string name="stamp_add_sub_head">Notary-App® helps protect your seal from forgery.</string>
    <string name="capturing_stamp">Capturing Your Seal?</string>
    <string name="ensure_text">Ensure you are in a well-lit area. Press your stamp on a white sheet of paper until you produce a clean representation of your seal.</string>
    <string name="profile">Profile</string>
    <string name="company">Company</string>
    <string name="address">Address</string>
    <string name="addressline1">Address Line 1 </string>
    <string name="addressline2">Address Line 2</string>
    <string name="state">State </string>
    <string name="city">City </string>
    <string name="license_num">Commission Number </string>
    <string name="add_license_num"> Add Your Commission Number</string>
    <string name="license_state">Commission State (*)</string>
    <string name="add_another_license_num">Add Another License Number</string>
    <string name="pledge">NOTARY PLEDGE</string>
    <string name="pledge_com">Complete Your Pledge</string>
    <string name="pledge_completing">Completing Your Pledge</string>
    <string name="pledge_com_long">By completing this pledge you are agreeing that oath is a promise to a deity and an affirmation is a pledge on ones
personal honor. Both are legally binding promises to tell the truth and subject the oath-taker or affirmant to penalities
for perjury.</string>
    <string name="notery_take_photo">Please take a picture of <u>your Notary Seal</u> on a piece of plain white paper</string>
    <string name="pledge_record">By clicking continue, I declare under the penalty of perjury that my name is Xxxx Xxxx and my Notary Commission number is xxxxxxx.</string>
    <string name="pro_header">STEP 2/2 \nSET UP YOUR PFOFILE</string>
    <string name="reset">Reset</string>
    <string name="switch_camera">Switch</string>
    <string name="pause">Pause</string>
    <string name="resume">Start</string>
    <string name="done">Stop</string>
    <string name="video_path">Video path:</string>
    <string name="video_too_short">Video is too short.</string>
    <string name="initiating">Initiating…</string>
    <string name="processing">Processing…</string>
    <string name="please_wait">Please wait</string>
    <string name="permissions_denied_exit">Permissions denied, exit.</string>
    <string name="changepwd">CHANGE YOUR PASSWORD</string>
    <string name="enteremail">Enter Your Email</string>
    <string name="forgotemailinfo">Please enter the email address that you used during registration</string>
    <string name="emailpwd">EMAIL</string>
    <string name="pwd">PASSWORD</string>
    <string name="updatepwd">PASSWORD \nUPDATED \nSUCCESSFULLY</string>
    <string name="continuelogin">CONTINUE LOGIN</string>
    <string name="continu">CONTINUE</string>
    <string name="login">LOGIN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_transaction">TransactionLog</string>
    <string name="menu_feature">Premium Features</string>
    <string name="menu_share">Share</string>
    <string name="menu_contact">Contact US</string>
    <string name="let_s_get_started">LET\'S GET STARTED</string>
    <string name="great">GREAT!</string>
    <string name="more_details"><u>Read More</u></string>
    <string name="free_trial_period">Welcome to the Notary-App® eJournal. For the next 7 days you can use it absolutely free, and you can also run 3 electronic ID verifications with no charge.</string>
    <string name="remaining">Remaining</string>
    <string name="upgrade">UPGRADE</string>
    <string name="free_trial_member">Free Trial</string>
    <string name="_10_transactions">10 ID Verifications</string>
    <string name="_30_days">30-DAY</string>
    <string name="tag_line">Empowering \nNotaries Every Day</string>
    <string name="dash_sub_head">Now that you’re registered start by\nnotarizing your first document.</string>
    <string name="prev"><![CDATA[< Prev]]></string>
    <string name="next_page"><![CDATA[Next >]]></string>
</resources>