<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background"
    tools:context=".ui.fragments.membership.Membership_ExpiredFragment">


    <Button
        android:id="@+id/upgradeBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/button_style_primary"
        android:text="@string/upgrade"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:textColor="@color/white"
        android:letterSpacing=".05"
        app:layout_constraintBottom_toBottomOf="@+id/container"
        app:layout_constraintEnd_toEndOf="@+id/container"
        app:layout_constraintStart_toStartOf="@+id/container"
        app:layout_constraintTop_toBottomOf="@+id/container" />

    <Button
        android:id="@+id/btn_pro_close4"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/round_white_close"
        android:fontFamily="@font/roboto_regular"
        android:paddingEnd="500dp"
        android:paddingRight="500dp"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="@+id/container"
        app:layout_constraintTop_toTopOf="@+id/container"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_style_tertiary"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:layout_goneMarginLeft="24dp">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_crown"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            tools:ignore="SpUsage"
            android:id="@+id/transactions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/oswald_medium"
            android:gravity="center"
            android:textAllCaps="true"
            android:text="@string/_10_transactions"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/textMoreDetails"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/daysCount"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/planDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/free_trial_period"
            android:textColor="@color/colorTextGray"
            android:textSize="@dimen/normalText"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/planName" />


        <TextView
            android:textSize="@dimen/normalText"
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/oswald_medium"
            android:gravity="center"
            android:letterSpacing=".05"
            android:text="@string/remaining"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/daysCount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/planDesc" />

        <TextView
            android:id="@+id/daysCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/oswald_medium"
            android:gravity="center"
            android:text="@string/_30_days"
            android:textAllCaps="true"
            android:textFontWeight="800"
            android:textColor="@color/colorSecondary"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@+id/transactions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:visibility="invisible"
            tools:ignore="SpUsage"
            android:id="@+id/textMoreDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:letterSpacing=".05"
            android:text="@string/more_details"
            android:textAlignment="gravity"
            android:textColor="@color/zoom_blue"
            android:textSize="@dimen/normalText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transactions" />

        <TextView
            android:id="@+id/planName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/oswald_medium"
            android:gravity="center"
            android:text="@string/free_trial_member"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintBottom_toTopOf="@+id/planDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView16" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />
</androidx.constraintlayout.widget.ConstraintLayout>